--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="77dp"
         android:layout_alignParentTop="true"
-        android:background="@color/primary">
+        android:background="@color/primary"
+        android:layout_marginBottom="60dp">
 
         <androidx.constraintlayout.utils.widget.ImageFilterButton
             android:layout_width="match_parent"
@@ -43,7 +44,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header"
-        android:layout_above="@id/footer">
+        android:layout_above="@id/footer"
+        android:paddingHorizontal="15dp"
+        android:orientation="vertical">
 
         <include layout="@layout/content_main"/>
     </LinearLayout>
