--- a/app/src/main/res/layout/teste.xml
+++ b/app/src/main/res/layout/teste.xml
@@ -7,27 +7,39 @@
     tools:context="com.fiap.vivo.view.MainActivity"
     android:background="@color/white">
 
-    <FrameLayout
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="77dp"
-        android:layout_alignParentTop="true"
-        android:background="@color/primary">
-
-        <androidx.constraintlayout.utils.widget.ImageFilterButton
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_gravity="center|top"
-            android:background="@color/white"
-            android:src="@drawable/logo" />
-
-    </FrameLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary"
-        android:layout_below="@id/header">
+        android:background="@color/white"
+        android:paddingHorizontal="15dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/default.layout.title"
+            android:text="@string/welcome_title"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/default.layout.text"
+            android:text="@string/cpf_cnpj_field_text"
+            android:textAlignment="center"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@drawable/edit_text_background"
+            android:inputType="number"
+            android:padding="16dp" />
+
+        <Button
+            android:theme="@style/default.layout.button.primary"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/search_login_button_text" />
 
     </LinearLayout>
 
