adicionado coluna planos no banco, escrita e leitura

--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -11,24 +11,24 @@
         android:id="@+id/senha"
         android:layout_width="238dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="28dp"
         android:hint="senha"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/buttonSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/nome"
-        android:layout_width="0dp"
+        android:layout_width="238dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="17dp"
         android:hint="Nome"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/senha"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cpfCnpj"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -36,7 +36,7 @@
         android:id="@+id/buttonSave"
         android:layout_width="205dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="164dp"
+        android:layout_marginBottom="179dp"
         android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +48,8 @@
         android:id="@+id/textView"
         android:layout_width="169dp"
         android:layout_height="0dp"
-        android:layout_marginTop="82dp"
-        android:layout_marginBottom="59dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginBottom="36dp"
         android:text="Cadastre-se"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/cpfCnpj"
@@ -61,7 +61,7 @@
         android:id="@+id/cpfCnpj"
         android:layout_width="238dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="19dp"
         android:hint="Cpf/Cnpj"
         android:textSize="23dp"
         app:layout_constraintBottom_toTopOf="@+id/nome"
@@ -73,13 +73,26 @@
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="239dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="15dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/senha"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nome" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="13dp"
+        android:ems="10"
+        android:hint=" Plano: Empresarial/Pessoal"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/senha"
+        app:layout_constraintEnd_toEndOf="@+id/senha"
+        app:layout_constraintStart_toStartOf="@+id/senha"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
