--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -26,6 +26,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="17dp"
         android:hint="Nome"
+        android:inputType="textCapWords|textCapSentences"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
