--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parentAjustes "
+    android:fillViewport="true"
     tools:context="com.fiap.vivo.view.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="77dp"
-        android:layout_alignParentTop="true"
-        android:background="@color/primary"
-        android:layout_marginBottom="60dp">
-
-        <androidx.constraintlayout.utils.widget.ImageFilterButton
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_gravity="center|top"
-            android:background="@color/white"
-            android:src="@drawable/logo" />
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/menuHeader"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="15dp"
-            android:background="@drawable/menu"
-            app:popupTheme="@style/Theme.VivoN.PopupOverlay" />
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="15dp"
-            app:popupTheme="@style/Theme.VivoN.PopupOverlay" />
-    </FrameLayout>
-
     <LinearLayout
-        android:id="@+id/contentBody"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/header"
-        android:layout_above="@id/footer"
-        android:paddingHorizontal="15dp"
-        android:orientation="vertical">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-        <include layout="@layout/content_main"/>
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="92dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/primary">
-
-        <TextView
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_gravity="bottom"
-            android:gravity="center_horizontal|center_vertical"
-            android:background="@color/white"
-            android:fontFamily="@font/baloo_bhai"
-            android:textColor="@color/primary"
-            android:text="@string/footer_text"
-            android:textSize="30dp" />
-    </FrameLayout>
-</RelativeLayout>
+            android:layout_height="match_parent">
+
+            <FrameLayout
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="77dp"
+                android:layout_alignParentTop="true"
+                android:background="@color/primary"
+                android:layout_marginBottom="60dp">
+
+                <androidx.constraintlayout.utils.widget.ImageFilterButton
+                    android:layout_width="match_parent"
+                    android:layout_height="75dp"
+                    android:layout_gravity="center|top"
+                    android:background="@color/white"
+                    android:src="@drawable/logo" />
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/menuHeader"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="15dp"
+                    android:background="@drawable/menu"
+                    app:popupTheme="@style/Theme.VivoN.PopupOverlay" />
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="15dp"
+                    app:popupTheme="@style/Theme.VivoN.PopupOverlay" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/contentBody"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/header"
+                android:layout_above="@id/footer"
+                android:paddingHorizontal="15dp"
+                android:orientation="vertical">
+
+                <include layout="@layout/content_main"/>
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/footer"
+                android:layout_width="match_parent"
+                android:layout_height="92dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/primary">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:layout_gravity="bottom"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:background="@color/white"
+                    android:fontFamily="@font/baloo_bhai"
+                    android:textColor="@color/primary"
+                    android:text="@string/footer_text"
+                    android:textSize="30dp" />
+            </FrameLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
