--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -15,7 +15,7 @@
         style="@style/default.layout.title"/>
 
     <TextView
-        android:id="@+id/requireCpfCnpj_label"
+        android:id="@+id/requireCpfCnpjLabel"
         android:layout_below="@id/welcomeMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
 
     <EditText
         android:id="@+id/requireCpfCnpjField"
-        android:layout_below="@id/requireCpfCnpj_label"
+        android:layout_below="@id/requireCpfCnpjLabel"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@drawable/edit_text_background"
@@ -36,7 +36,7 @@
         android:paddingVertical="4dp"/>
 
     <Button
-        android:id="@+id/searchLogin"
+        android:id="@+id/searchLoginButton"
         android:layout_below="@id/requireCpfCnpjField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
 
     <TextView
         android:id="@+id/docCheck"
-        android:layout_below="@id/searchLogin"
+        android:layout_below="@id/searchLoginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
