--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -15,13 +15,13 @@
         android:layout_marginBottom="55dp"
         android:text="Seja Bem-Vindo(a)"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/nome"
+        app:layout_constraintBottom_toTopOf="@+id/registrationNameField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/nome"
+        android:id="@+id/registrationNameField"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="12dp"
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cpf_"
-        app:layout_constraintTop_toBottomOf="@+id/nome" />
+        app:layout_constraintTop_toBottomOf="@+id/registrationNameField" />
 
     <TextView
         android:id="@+id/email"
@@ -69,7 +69,7 @@
         android:text="Nome:"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/cpf_"
-        app:layout_constraintEnd_toStartOf="@+id/nome"
+        app:layout_constraintEnd_toStartOf="@+id/registrationNameField"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
