--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
     <TextView
-        android:id="@+id/requireCpfCnpjField"
+        android:id="@+id/registrationCpfCnpj"
         android:layout_width="0dp"
         android:layout_height="61dp"
         android:layout_marginEnd="1dp"
@@ -39,7 +39,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cpfCnpj"
+        app:layout_constraintStart_toEndOf="@+id/registrationCpfCnpj"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -66,7 +66,6 @@
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/requireCpfCnpjField" />
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
