--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,4 +46,10 @@
         <item name="android:radius">10dp</item>
         <item name="android:layout_marginVertical">30dp</item>
     </style>
+
+    <style name="default.layout.field" parent="TextAppearance.AppCompat.Button">
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:paddingVertical">4dp</item>
+    </style>
 </resources>
