--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -1,51 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.fiap.vivo.view.FourthFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <TextView
-        android:id="@+id/dashboardPageTitle"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/content_formulario"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/dashboard_page_welcome_title"
-        style="@style/default.layout.title"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.fiap.vivo.view.FourthFragment">
 
-    <TextView
-        android:id="@+id/dashboardPageName"
-        android:layout_below="@id/dashboardPageTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/default.layout.text"/>
+        <TextView
+            android:id="@+id/dashboardPageTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/dashboard_page_welcome_title"
+            style="@style/default.layout.title"/>
 
-    <TextView
-        android:id="@+id/dashboardPageCpfCnpj"
-        android:layout_below="@id/dashboardPageName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/default.layout.text"/>
+        <TextView
+            android:id="@+id/dashboardPageName"
+            android:layout_below="@id/dashboardPageTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/default.layout.text"/>
 
-    <TextView
-        android:id="@+id/dashboardPageEmail"
-        android:layout_below="@id/dashboardPageCpfCnpj"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/default.layout.text"/>
+        <TextView
+            android:id="@+id/dashboardPageCpfCnpj"
+            android:layout_below="@id/dashboardPageName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/default.layout.text"/>
 
-    <TextView
-        android:id="@+id/dashboardPagePlan"
-        android:layout_below="@id/dashboardPageEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/default.layout.text"/>
+        <TextView
+            android:id="@+id/dashboardPageEmail"
+            android:layout_below="@id/dashboardPageCpfCnpj"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/default.layout.text"/>
 
-    <TextView
-        android:id="@+id/dashboardPageSituation"
-        android:layout_below="@id/dashboardPagePlan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/default.layout.text"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/dashboardPagePlan"
+            android:layout_below="@id/dashboardPageEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/default.layout.text"/>
+
+        <TextView
+            android:id="@+id/dashboardPageSituation"
+            android:layout_below="@id/dashboardPagePlan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/default.layout.text"/>
+    </LinearLayout>
+</ScrollView>
