--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -1,101 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.fiap.vivo.view.ThirdFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <TextView
-        android:id="@+id/registrationPageTitle"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_page_title"
-        style="@style/default.layout.title"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.fiap.vivo.view.ThirdFragment">
 
-    <TextView
-        android:id="@+id/registrationCpfCnpj"
-        android:layout_below="@id/registrationPageTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"
-        style="@style/default.layout.title"/>
+        <TextView
+            android:id="@+id/registrationPageTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_title"
+            style="@style/default.layout.title"/>
 
-    <TextView
-        android:id="@+id/registrationNameLabel"
-        android:layout_below="@id/registrationCpfCnpj"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_page_name"
-        style="@style/default.layout.text"/>
+        <TextView
+            android:id="@+id/registrationCpfCnpj"
+            android:layout_below="@id/registrationPageTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:textAlignment="center"
+            style="@style/default.layout.title"/>
 
-    <EditText
-        android:id="@+id/registrationNameField"
-        android:layout_below="@id/registrationNameLabel"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        tools:ignore="TouchTargetSizeCheck"
-        style="@style/default.layout.field"/>
+        <TextView
+            android:id="@+id/registrationNameLabel"
+            android:layout_below="@id/registrationCpfCnpj"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_name"
+            style="@style/default.layout.text"/>
 
-    <TextView
-        android:id="@+id/registrationEmailLabel"
-        android:layout_below="@id/registrationNameField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_page_email"
-        style="@style/default.layout.text"/>
+        <EditText
+            android:id="@+id/registrationNameField"
+            android:layout_below="@id/registrationNameLabel"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            tools:ignore="TouchTargetSizeCheck"
+            style="@style/default.layout.field"/>
 
-    <EditText
-        android:id="@+id/registrationEmailField"
-        android:layout_below="@id/registrationEmailLabel"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:inputType="textEmailAddress"
-        tools:ignore="TouchTargetSizeCheck"
-        style="@style/default.layout.field"/>
+        <TextView
+            android:id="@+id/registrationEmailLabel"
+            android:layout_below="@id/registrationNameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_email"
+            style="@style/default.layout.text"/>
 
-    <TextView
-        android:id="@+id/registrationPasswordLabel"
-        android:layout_below="@id/registrationEmailField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_page_email"
-        style="@style/default.layout.text"/>
+        <EditText
+            android:id="@+id/registrationEmailField"
+            android:layout_below="@id/registrationEmailLabel"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:inputType="textEmailAddress"
+            tools:ignore="TouchTargetSizeCheck"
+            style="@style/default.layout.field"/>
 
-    <EditText
-        android:id="@+id/registrationPasswordField"
-        android:layout_below="@id/registrationPasswordLabel"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:inputType="textPassword"
-        tools:ignore="TouchTargetSizeCheck"
-        style="@style/default.layout.field"/>
+        <TextView
+            android:id="@+id/registrationPasswordLabel"
+            android:layout_below="@id/registrationEmailField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_email"
+            style="@style/default.layout.text"/>
 
-    <TextView
-        android:id="@+id/registrationPersonNameLabel"
-        android:layout_below="@id/registrationPasswordField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_page_person"
-        style="@style/default.layout.text"/>
+        <EditText
+            android:id="@+id/registrationPasswordField"
+            android:layout_below="@id/registrationPasswordLabel"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:inputType="textPassword"
+            tools:ignore="TouchTargetSizeCheck"
+            style="@style/default.layout.field"/>
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_below="@id/registrationPersonNameLabel"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:inputType="textPersonName"
-        tools:ignore="TouchTargetSizeCheck"
-        style="@style/default.layout.field"/>
+        <TextView
+            android:id="@+id/registrationPersonNameLabel"
+            android:layout_below="@id/registrationPasswordField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_person"
+            style="@style/default.layout.text"/>
 
-    <Button
-        android:id="@+id/registrationButtonSave"
-        android:layout_below="@id/editTextTextPersonName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_page_save"
-        tools:ignore="TouchTargetSizeCheck"
-        style="@style/default.layout.button.primary"/>
+        <EditText
+            android:id="@+id/editTextTextPersonName"
+            android:layout_below="@id/registrationPersonNameLabel"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:inputType="textPersonName"
+            tools:ignore="TouchTargetSizeCheck"
+            style="@style/default.layout.field"/>
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/registrationButtonSave"
+            android:layout_below="@id/editTextTextPersonName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_save"
+            tools:ignore="TouchTargetSizeCheck"
+            style="@style/default.layout.button.primary"/>
+    </LinearLayout>
+</ScrollView>
