--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_page_title"
+            android:layout_marginTop="60dp"
             style="@style/default.layout.title"/>
 
         <TextView
