--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:text="@string/welcome_title"
             android:textAlignment="center"
+            android:layout_marginTop="60dp"
             style="@style/default.layout.title"/>
 
         <TextView
