--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/registration_page_title"
+            android:layout_marginTop="60dp"
             style="@style/default.layout.title"/>
 
         <TextView
@@ -66,7 +67,7 @@
             android:layout_below="@id/registrationEmailField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/registration_page_email"
+            android:text="@string/registration_page_password"
             style="@style/default.layout.text"/>
 
         <EditText
