refatoracao de nomes das classes e pacotes p padrao mvvm

--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.fiap.vivo.view.RegistrationScreen">
+        tools:context="com.fiap.vivo.ui.fragments.registrationScreen.RegistrationScreen">
 
         <TextView
             android:id="@+id/registrationPageTitle"
