--- a/app/src/main/res/layout/dashboard_screen.xml
+++ b/app/src/main/res/layout/dashboard_screen.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.fiap.vivo.view.DashboardScreen">
+        tools:context="com.fiap.vivo.ui.fragments.dashboardScreen.DashboardScreen">
 
         <TextView
             android:id="@+id/dashboardPageTitle"
