--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.fiap.vivo.view.InitialScreen"
+        android:name="com.fiap.vivo.ui.fragments.InitialScreen.InitialScreen"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/initial_screen">
 
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.fiap.vivo.view.LoginScreen"
+        android:name="com.fiap.vivo.ui.fragments.loginScreeen.LoginScreen"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/login_screen">
 
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/thirdFragment2"
-        android:name="com.fiap.vivo.view.RegistrationScreen"
+        android:name="com.fiap.vivo.ui.fragments.registrationScreen.RegistrationScreen"
         android:label="fragment_third"
         tools:layout="@layout/registration_screen" >
         <action
@@ -42,7 +42,7 @@
     </fragment>
     <fragment
         android:id="@+id/fourthFragment"
-        android:name="com.fiap.vivo.view.DashboardScreen"
+        android:name="com.fiap.vivo.ui.fragments.dashboardScreen.DashboardScreen"
         android:label="fragment_fourth"
         tools:layout="@layout/dashboard_screen" >
         <action
